# os-homeworks

./: .gitignore  CMakeLists.txt  makefile
hw-1/include/: syscalls.h
hw-1/include/common/: types.h
hw-1/src/: syscalls.cpp
hw-2/: CMakeLists.txt
hw-2/171044005_hw2/: makefile
hw-2/171044005_hw2/include/: MMU.h  MMU_Config.h
hw-2/171044005_hw2/src/: MMU.cpp
hw-2/include/: MMU_Statistics.h
hw-2/src/: MMU_Config.cpp  MMU_Statistics.cpp  main.cpp
hw-3/: .gitignore  CMakeLists.txt  REPORT.md  makefile  run.sh  sourceFile  test.sh
hw-3/include/: FileSystem.h  memory_manager.h  page_table_entry.h
hw-3/src/: FileSystem.cpp  fileSystemOperation.cpp  main.cpp  makeFileSystem.cpp  memory_manager.cpp  memory_operations.cpp  page_table_entry.cpp
include/: multitasking.h
iso/boot/grub/: grub.cfg
src/: kernel.cpp  multitasking.cpp  syscalls.cpp
